--- a/src/procedures/reach/CMakeLists.txt
+++ b/src/procedures/reach/CMakeLists.txt
@@ -1,24 +1,21 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(action_manager)
+project(reach)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+ add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  actionlib
-  actionlib_msgs
-  ai_msgs
   roscpp
-  std_msgs
-  procedures_msgs
+  rospy
+  ai_msgs
+  action_manager
 )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
-
 
 
 ###################################
@@ -32,8 +29,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES action_manager
-  CATKIN_DEPENDS ai_msgs roscpp std_msgs actionlib
+#  LIBRARIES reach
+  CATKIN_DEPENDS roscpp rospy ai_msgs
 #  DEPENDS system_lib
 )
 
@@ -44,44 +41,43 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-  include
+ include
   ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
-add_library(${PROJECT_NAME}
-  src/Action.cpp
-  src/AtomicAction.cpp
-  src/ActionBlock.cpp
-  src/ActionPoint.cpp
-  src/Point.cpp
-  src/ActionPerformer.cpp
-)
+ add_library(${PROJECT_NAME}
+   src/MovePoint.cpp
+ )
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
-add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/action_manager_node.cpp)
+ add_executable(${PROJECT_NAME}_proc src/reach_proc.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
+ set_target_properties(${PROJECT_NAME}_proc PROPERTIES OUTPUT_NAME proc PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+ add_dependencies(${PROJECT_NAME}_proc ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+ target_link_libraries(${PROJECT_NAME}_proc
+   ${catkin_LIBRARIES}
+ )
+
+ target_link_libraries(${PROJECT_NAME}_proc
+   ${PROJECT_NAME}
+ )
 
 #############
 ## Install ##
@@ -123,7 +119,7 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_action_manager.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_reach.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
